src/test/deca/syntax/invalid/testInvalidClassName1.deca
// name a class using an invalid name
// Result : Error
// number as a name
class 42{

}
